--- a/package.json
+++ b/package.json
@@ -146,5 +146,10 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.11.6",
+    "@babel/preset-flow": "^7.10.4",
+    "flow-bin": "^0.133.0"
   }
 }
