--- a/package.json
+++ b/package.json
@@ -80,7 +80,8 @@
     "resolve": "1.15.0"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "yarn webpack-dev-server",
+    "start-script": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js",
     "lint": "eslint app/ --ext .js"
