--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "test": "node scripts/test.js",
     "lint": "eslint app/ --ext .js"
   },
+  "proxy": "http://localhost:5000",
   "eslintConfig": {
     "extends": "react-app"
   },
