--- a/package.json
+++ b/package.json
@@ -70,6 +70,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.35",
     "@emotion/styled": "^10.0.27",
+    "antd": "^4.15.5",
+    "bizcharts": "^4.1.10",
     "camelcase": "^5.3.1",
     "fs-extra": "^8.1.0",
     "react": "^16.13.1",
